--- a/Lab7/style.css
+++ b/Lab7/style.css
@@ -39,7 +39,7 @@
 }
 
 .logo2:hover{
-    animation-name: obrot, scaling;
+    animation-name: animacja, obrot, scaling;
     animation-iteration-count: forwards;
     animation-duration: 2s;
 
@@ -52,3 +52,4 @@
         transform: rotate(360deg);
     }
 }
+
